--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
 }
 
 /* Public  */
+button{
+    cursor: pointer;
+}
+
 .btnFill{
     background: var(--orange);
     color: #000;
@@ -47,6 +51,8 @@
     font-size: 1.2rem;
     font-family: 'Oxanium', cursive;
     font-weight: 600;
+    cursor: pointer;
+    transition: 1s;
     cursor: pointer;
 }
 
@@ -849,6 +855,24 @@ nav .hiddenNav .navigation .navigator5 ul li a::before
     margin-bottom: 10px;
 }
 
+.gammingProduct .content .cards .contentText h4{
+    color: var(--white);
+    text-transform: capitalize;
+    font-size: .9rem;
+    margin-top: 10px;
+    font-weight: 600;
+    margin-bottom: 10px;
+
+}
+.gammingProduct .content .cards ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+    list-style: none;
+    transition: 1s;
+}
+
 .gammingProduct .content .cards .contentText span i{
     color: var(--orange);
 }
@@ -1054,7 +1078,10 @@ nav .hiddenNav .navigation .navigator5 ul li a::before
 .bannerPlayer,
 .bannersinglePlayer,
 .bannerLogin,
-.bannerSignUp{
+.bannerSignUp,
+.bannerMatch,
+.bannerProduct,
+.bannerdetailsProduct{
     background: url('img/bgProPlayer.jpg');
     height: 400px;
     background-position: center;
@@ -1073,7 +1100,10 @@ nav .hiddenNav .navigation .navigator5 ul li a::before
 .bannerPlayer .aboutTitle h3,
 .bannersinglePlayer .aboutTitle h3,
 .bannerLogin .aboutTitle h3,
-.bannerSignUp .aboutTitle h3{
+.bannerSignUp .aboutTitle h3,
+.bannerMatch .aboutTitle h3,
+.bannerProduct .aboutTitle h3,
+.bannerdetailsProduct .aboutTitle h3{
     color: var(--white);
     text-transform: capitalize;
     font-size: 3rem;
@@ -1086,7 +1116,10 @@ nav .hiddenNav .navigation .navigator5 ul li a::before
 .bannerPlayer p,
 .bannersinglePlayer p,
 .bannerLogin p,
-.bannerSignUp p{
+.bannerSignUp p,
+.bannerMatch p,
+.bannerProduct p,
+.bannerdetailsProduct p{
     color: var(--white);
     font-size: 1.1rem;
     text-transform: capitalize;
@@ -2012,6 +2045,191 @@ nav .hiddenNav .navigation .navigator5 ul li a::before
 
 .notFound button{
     margin-top: 20px;
+}
+
+
+/* section match */
+.recordWinners{
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+}
+
+.winners .cards{
+    padding: 50px;
+    background: var(--card-bg);
+    max-width: 400px;
+}
+
+.winners .cards .content table tr th{
+    padding: 20px;
+}
+
+.winners .cards .content table tr{
+    color: var(--white);
+    text-transform: capitalize;
+}
+
+/* Section Dertails winners */
+.recordWinnersDetails .gameSummary .summary .cards{
+    height: 500px;
+    background: url('img/bgMatch.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+}
+
+.recordWinnersDetails .gameSummary .summary .cards{
+    height: 500px;
+    background: url('img/bgMatch.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+}
+
+.recordWinnersDetails .formInfo ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    background: var(--card-bg);
+    padding: 40px 10px;
+    flex-wrap: wrap;
+    gap: 30px;
+    text-transform: capitalize;
+    font-weight: 800;
+}
+
+.recordWinnersDetails .formInfo ul li p{
+    color: var(--white);
+}
+
+.recordWinnersDetails .formInfo ul li h3{
+    color: var(--orange);
+}
+
+.recordWinnersDetails .formInfo .aboutTournament{
+    max-width: 600px;
+    margin-top: 20px;
+    color: var(--white);
+    text-align: justify;
+}
+
+/* Product Details */
+.contentProductDetails{
+    background: #09162f;
+    display: flex;
+    justify-content: center;
+    padding: 50px 8%;
+    flex-wrap: wrap;
+    column-gap: 100px;
+    row-gap: 100px;
+}
+
+.contentProductDetails .product .cards{
+    max-width: 500px;
+}
+
+.contentProductDetails .product .images{
+    width: 500px;
+    background: #15233e;
+}
+
+.contentProductDetails .product .images img{
+    width: 100%;
+    border-radius: 10px;
+    height: 100%;
+}
+
+.contentProductDetails .product .thumbnails ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 500px;
+    gap: 5px;
+    margin-top: -10px;
+}
+
+
+.contentProductDetails .product .thumbnails .images{
+    width: 80px;
+    height: 80px;
+}
+
+.contentProductDetails .product .thumbnails .images img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+
+
+
+
+
+
+.contentProductDetails .detailsProduct{
+    max-width: 500px;
+    background: var(--card-bg);
+    padding: 25px;
+}
+
+.contentProductDetails .detailsProduct h3{
+    color: var(--white);
+    text-transform: capitalize;
+    font-size: 1.9rem;
+}
+
+.contentProductDetails .detailsProduct span i{
+    color: var(--orange);
+    margin-top: 10px;
+    text-transform: capitalize;
+    font-size: 1.9rem;
+}
+
+.contentProductDetails .detailsProduct h4{
+    color: var(--white);
+    margin-top: 10px;
+    text-transform: capitalize;
+    font-size: 1.5rem;
+}
+
+.contentProductDetails .detailsProduct p{
+    color: var(--white);
+    margin-top: 10px;
+    text-transform: capitalize;
+    font-size: 1.1rem;
+}
+
+.contentProductDetails .detailsProduct .features{
+    color: var(--white);
+    margin-top: 15px;
+    text-transform: capitalize;
+    list-style: none;
+    font-size: 1rem;
+}
+
+.contentProductDetails .detailsProduct .features li{
+    margin-top: 10px;
+}
+
+.contentProductDetails .detailsProduct .features li i{
+    margin-right: 10px;
+}
+
+.contentProductDetails .detailsProduct .cart{
+    list-style: none;
+    align-items: baseline;
+    gap: 50px;
+    display: flex;
+}
+
+.contentProductDetails .detailsProduct .quantity{
+    display: flex;
+    margin-top: 15px;
+    list-style: none;
 }
 
 
